sermant-integration-tests/xds-service-test/script/flowcontrol/flowcontrol-rule/spring-server-virtureservice-retry.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: spring-server-virtual-service-retry
spec:
  hosts:
  - spring-server
  http:
  - name: "testRetryOnGateWayError"
    match:
    - headers:
        version:
          exact: v1
      uri:
        exact: /testGateWayError
      ignoreUriCase: false
    route:
    - destination:
        host: spring-server
        subset: v1
        port:
          number: 8081
    retries:
      attempts: 2
      perTryTimeout: 1s
      retryOn: "gateway-error"
  - name: "testRetryOnHeader"
    match:
      - headers:
          version:
            exact: v1
        uri:
          exact: /testRetryOnHeader
        ignoreUriCase: false
    route:
      - destination:
          host: spring-server
          subset: v1
          port:
            number: 8081
    retries:
      attempts: 2
      perTryTimeout: 1s
      retryOn: "retriable-headers"
  - name: "testRetryOn5xxError"
    match:
      - headers:
          version:
            exact: v1
        uri:
          exact: /test5xxError
        ignoreUriCase: false
    route:
      - destination:
          host: spring-server
          subset: v1
          port:
            number: 8081
    retries:
      attempts: 2
      perTryTimeout: 1s
      retryOn: "5xx"
  - name: "testRetryOn4xxError"
    match:
      - headers:
          version:
            exact: v1
        uri:
          exact: /test4xxError
        ignoreUriCase: false
    route:
      - destination:
          host: spring-server
          subset: v1
          port:
            number: 8081
    retries:
      attempts: 2
      perTryTimeout: 1s
      retryOn: "retriable-4xx"
  - name: "testRetryOnTimeout"
    match:
      - headers:
          version:
            exact: v1
        uri:
          exact: /testTimeOut
        ignoreUriCase: false
    route:
      - destination:
          host: spring-server
          subset: v1
          port:
            number: 8081
    retries:
      attempts: 2
      perTryTimeout: 1s
      retryOn: "reset"
  - name: "testRetryOnStatusCode"
    match:
      - headers:
          version:
            exact: v1
        uri:
          exact: /testRetryOnStatusCode
        ignoreUriCase: false
    route:
      - destination:
          host: spring-server
          subset: v1
          port:
            number: 8081
    retries:
      attempts: 2
      perTryTimeout: 1s
      retryOn: "retriable-status-codes"
